--- a/package.json
+++ b/package.json
@@ -28,6 +28,5 @@
     "ejs"
   ],
   "author": "Florent Jaby <florent.jaby@gmail.com>",
-  "license": "MIT",
-  "gitHead": "75adfe26e0a8b0534a5ac9b02ed7884612b64832"
+  "license": "MIT"
 }
